--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartFridge">
+        <activity
+            android:name=".ItemDetailsActivity"
+            android:exported="false" />
+
         <service android:name=".DataFetchingService" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
